syntax = "proto3";
package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "v1";

// The greeting service definition.
service Hello {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get:"/hello"
    };
  }
  rpc Echo(EchoRequest) returns (EchoReply) {
    option (google.api.http) = {
      post:"/echo"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message EchoRequest {
  string content = 1;
}

message EchoReply {
  string content = 1;
}
